--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://www.w3docs.com'" />
+    <meta http-equiv="refresh" content="0; url='https://cie-dfw.org/event/2021-dfw-yesc/'" />
   </head>
   <body>
-    <p>Please follow <a href="https://www.w3docs.com">this link</a>.</p>
+    <p>Please follow <a href="https://cie-dfw.org/event/2021-dfw-yesc/">this link</a>.</p>
   </body>
 </html>
